fix: refactor CommandRunner to streamline pipeline execution, improve built-in command handling, and enhance I/O management